<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginLeft="75dp"
        android:src="@drawable/bgsplash" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginLeft="85dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginLeft="65dp"
        android:gravity="center"
        android:text="Mari Mulai Belajar"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/username"
        android:textColorHint="@color/colorPrimary"
        android:textSize="25sp" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimary"
        android:textSize="25sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="80sp"
        android:text="forgot password"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="10sp"
        android:text="registrasi"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="login"
        android:textColor="#fff"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="90dp"/>
</LinearLayout>